# su2-final-projects-2025-veselyguliev

./: README.md  pyproject.toml  requirements.txt  run_tracking.py
docs/: NOTES.md
notebooks/: Endocytosis_Starter.ipynb
src/: __init__.py  data.py  models.py  preprocessing.py  tracking.py  utils.py
tests/: test_basic.py
